bugfix: dont align to center

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
   padding: 2.5em;
   background-color: #EEEEEE;
   color: #333333;
-  text-align: center;
 }
 
 .times {
